Bug#39672 - Using Bitmap::nextSet() failed after searching from last bit cleard and crossing multiples of 1024.

To show the problem, I added a unit test that can be 
activated by "SET GLOBAL FALCON_DEBUG_TRACE=64".  The unit
test contains 4 different tests that print "** Error" when
something goes wrong.